--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -22,7 +22,7 @@
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Driver" CellClass="d-flex justify-end">
+            <TemplateColumn T="Driver" Sortable="false" CellClass="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup Size="@Size.Small">
                         <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriver(context.Item))" />
