--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -10,24 +10,19 @@
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <MudCountrySelect @bind-Value="_selectedCountry" />
 
-                <MudText>@exampleStore</MudText>
             </MudPaper>
         </MudItem>
 
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <h1>Hello, world!</h1>
-                Welcome to your new app.
+                <MudText Typo="Typo.h2">SimTECH</MudText>
             </MudPaper>
         </MudItem>
 
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <CountryFlag Code="_selectedCountry" IncludeName="true" />
 
-                <MudButton OnClick="(async () => await SetExample(newExampleString))">SetExample</MudButton>
             </MudPaper>
         </MudItem>
 
@@ -35,6 +30,30 @@
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+
+                    </MudPaper>
+                </MudItem>
+
+                <MudItem xs="12">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+
+                    </MudPaper>
+                </MudItem>
+            </MudGrid>
+        </MudItem>
+
+        <MudItem xs="12" sm="6">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
+                <MudText Typo="Typo.h6">Examples</MudText>
+
+                <MudStack Spacing="4">
+                    <div>
+                        <!-- Local storage value -->
+                        <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">Set store</MudButton>
+                        <MudText>@_exampleStore</MudText>
+                    </div>
+                    <div>
+                        <!-- Authenticate by policy -->
                         <AuthorizeView>
                             <Authorized>
                                 <p>Damn @(AuthenticationProvider.CurrentUser?.FullName ?? "wtf who"), good to see you logged in.</p>
@@ -43,57 +62,50 @@
                                 <p>What are you doing here, mate. You aren't even logged in!</p>
                             </NotAuthorized>
                         </AuthorizeView>
-                    </MudPaper>
-                </MudItem>
 
-                <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
                         <AuthorizeView Roles="admin">
                             <Authorized>
                                 <p>O damn, hello Mr. Admin! Love yo see ya :)</p>
                             </Authorized>
                         </AuthorizeView>
-                    </MudPaper>
-                </MudItem>
-            </MudGrid>
-        </MudItem>
+                    </div>
+                    <div>
+                        <!-- Authenticate by policy -->
+                        <AuthorizeView Policy="CoolOnly">
+                            <Authorized>
+                                <p>Good to see some cool dudes here</p>
+                            </Authorized>
+                            <NotAuthorized>
+                                <p>No offense, but you're kinda cringe... lol</p>
+                            </NotAuthorized>
+                        </AuthorizeView>
 
-        <MudItem xs="12" sm="6">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
-                <AuthorizeView Policy="CoolOnly">
-                    <Authorized>
-                        <p>Good to see some cool dudes here</p>
-                    </Authorized>
-                    <NotAuthorized>
-                        <p>No offense, but you're kinda cringe... lol</p>
-                    </NotAuthorized>
-                </AuthorizeView>
-
-                <AuthorizeView Policy="ChoicePolicy" Resource="3">
-                    <Authorized>
-                        <p>But man, you wouldn't believe the cringe-worthy dudes that show up here.</p>
-                    </Authorized>
-                    <NotAuthorized>
-                        <p>Christ mate, why are you like the way you are.</p>
-                    </NotAuthorized>
-                </AuthorizeView>
+                        <AuthorizeView Policy="ChoicePolicy" Resource="3">
+                            <Authorized>
+                                <p>But man, you wouldn't believe the cringe-worthy dudes that show up here.</p>
+                            </Authorized>
+                            <NotAuthorized>
+                                <p>Christ mate, why are you like the way you are.</p>
+                            </NotAuthorized>
+                        </AuthorizeView>
+                    </div>
+                </MudStack>
             </MudPaper>
         </MudItem>
     </MudGrid>
 </MudContainer>
 
 @code {
-    public Country _selectedCountry { get; set; } = Country.NL;
-    private string exampleStore = "nothing stored yo";
-    private string newExampleString = "this is a new example string for storage";
+    string? _exampleStore = "nothing stored yo";
+    string _newExampleString = "this is a new example string for storage";
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         var storedExample = await LocalStorage.GetAsync<string>("example");
-        exampleStore = storedExample.Success ? storedExample.Value : "yikes, really nothing stored yo";
+        _exampleStore = storedExample.Success ? storedExample.Value : "yikes, really nothing stored yo";
     }
 
-    private async Task SetExample(string text) => await LocalStorage.SetAsync("example", text);
+    private async Task SetExample() => await LocalStorage.SetAsync("example", _newExampleString);
 
     private void NavigateHome()
     {
