Calendar visual fixes

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -30,7 +30,8 @@
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-
+                        <MudText Typo="Typo.h6">Last races</MudText>
+                        <MudText>Todo</MudText>
                     </MudPaper>
                 </MudItem>
 
